--- a/src/dot-merlin/dot-protocol/dune
+++ b/src/dot-merlin/dot-protocol/dune
@@ -1,5 +1,4 @@
 (library
  (name merlin_dot_protocol)
- (public_name merlin.merlin_dot_protocol)
  (wrapped false)
- (libraries merlin_utils lsp.dune_csexp))
+ (libraries merlin_utils csexp))
