--- a/merlin.opam
+++ b/merlin.opam
@@ -12,11 +12,10 @@ build: [
 depends: [
   "ocaml" {>= "4.02.3" & < "4.11"}
   "dune" {>= "1.8.0"}
-  "dot-merlin-reader" {>= "1.0"}
+  "ocamlfind" {>= "1.5.2"}
   "yojson" {>= "1.6.0"}
   "mdx" {with-test & >= "1.3.0"}
   "conf-jq" {with-test}
-  "csexp" {>= "1.1.0"}
 ]
 synopsis:
   "Editor helper, provides completion, typing and source browsing in Vim and Emacs"
