--- a/src/frontend/dune
+++ b/src/frontend/dune
@@ -2,19 +2,19 @@
  (name      query_protocol)
  (public_name merlin.query_protocol)
  (modules   query_protocol)
- (flags -open Merlin_utils)
- (libraries merlin_kernel merlin_utils parsing))
+ (flags -open Merlin_utils -open Merlin_parsing)
+ (libraries merlin_kernel merlin_utils merlin_parsing))
 
 (library
  (name      query_commands)
  (public_name      merlin.query_commands)
  (modules   query_commands)
- (flags -open Merlin_utils -open Merlin_analysis -open Utils)
+ (flags -open Merlin_utils -open Merlin_analysis -open Utils -open Merlin_parsing)
  (libraries
   merlin_utils
   merlin_kernel
   utils
-  parsing
+  merlin_parsing
   typing
   merlin_specific
   config
