--- a/src/ocaml/typing/dune
+++ b/src/ocaml/typing/dune
@@ -2,6 +2,6 @@
   (name typing)
   (public_name merlin.typing)
   (wrapped false)
-  (flags -open Merlin_utils -open Utils (:standard -w -9))
+  (flags -open Merlin_utils -open Utils -open Merlin_parsing (:standard -w -9))
   (modules_without_implementation annot outcometree)
-  (libraries merlin_utils parsing utils))
+  (libraries merlin_utils merlin_parsing utils))
