--- a/src/extend/dune
+++ b/src/extend/dune
@@ -2,6 +2,6 @@
  (name      merlin_extend)
  (public_name      merlin.extend)
  (wrapped   false)
- (flags -open Merlin_parsing (:standard -w -9))
+ (flags -open Merlin_parsing -open Typing (:standard -w -9))
  (modules   (:standard \ extend_helper))
  (libraries merlin_parsing typing unix utils))
