--- a/src/frontend/dune
+++ b/src/frontend/dune
@@ -9,7 +9,7 @@
  (name      query_commands)
  (public_name      merlin.query_commands)
  (modules   query_commands)
- (flags -open Merlin_utils -open Merlin_analysis -open Utils -open Merlin_parsing)
+ (flags -open Merlin_utils -open Merlin_analysis -open Utils -open Merlin_parsing -open Typing)
  (libraries
   merlin_utils
   merlin_kernel
