--- a/src/frontend/dune
+++ b/src/frontend/dune
@@ -2,14 +2,14 @@
  (name      query_protocol)
  (public_name merlin.query_protocol)
  (modules   query_protocol)
- (flags -open Merlin_utils -open Merlin_parsing)
+ (flags -open Merlin_utils -open Merlin_parsing -open Merlin_kernel)
  (libraries merlin_kernel merlin_utils merlin_parsing))
 
 (library
  (name      query_commands)
  (public_name      merlin.query_commands)
  (modules   query_commands)
- (flags -open Merlin_utils -open Merlin_analysis -open Utils -open Merlin_parsing -open Typing)
+ (flags -open Merlin_utils -open Merlin_analysis -open Utils -open Merlin_parsing -open Typing -open Merlin_kernel)
  (libraries
   merlin_utils
   merlin_kernel
